_archive/content-services/4.1/concepts/themes-intro.md
---
author: [Alfresco Documentation, Alfresco Documentation]
source: 
audience: 
category: Customization
option: Share themes
---

# Share themes

When you run Alfresco Share, the look and feel is set by a default theme. This section describes how to select one of the alternative themes available in Share, and also how to create and use your own themes for corporate branding.

Share themes consist of a directory containing a CSS and images files, and they can be located in the theme directory \(<TOMCAT\_HOME\>/webapps/share/WEB-INF/classes/alfresco/site-data/themes\). The default theme is called default.xml.

The following themes are available in Share:

-   Blue theme \(default\)
-   Yellow theme
-   Green theme
-   High contrast black
-   Google Docs theme

The default theme, which comprises the CSS and image assets used across all pages, displays in a new Alfresco installation.

-   **[Selecting themes](../tasks/themes-select.md)**  
Only an Administrator user can select the Share theme. Any change to the theme will affect all users of the Alfresco instance from the next time that they log in or from a browser refresh.
-   **[Creating a new theme](../tasks/themes-create.md)**  

-   **[Editing a theme](../tasks/themes-edit.md)**  


**Parent topic:**[Customizing Alfresco Share configuration items](../tasks/share-customize.md)

